--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=9090
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/springbootdb
+spring.datasource.username=postgres spring.datasource.password=postgres@123
+spring.jpa.hibernate.ddl-auto=create-drop
